<resources>
    <string name="app_name">Stellarfy</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="password_does_not_match">Password does not match!</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notification</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="quantity">Quantity</string>
    <string name="update">Update</string>
    <string name="blank">blank</string>
    <string name="todo">TODO</string>
</resources>