<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        android:actionLayout="@layout/activity_bottom_navigation"
        app:showAsAction="always"
        android:id="@+id/iHomeBotNav"
        />

    <item
        android:id="@+id/iCartBotNav"
        android:title="@string/cart"
        android:icon="@drawable/ic_cart"
        app:showAsAction="ifRoom"
        android:actionLayout="@layout/activity_bottom_navigation"


        />
    <item
        android:title="@string/profile"
        android:id="@+id/iProfileBotNav"
        android:actionLayout="@layout/activity_bottom_navigation"
        android:icon="@drawable/ic_profile"
        app:showAsAction="ifRoom"
        />
</menu>