<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"

    tools:context=".activities.SignUpActivity">


    <ImageView
        android:id="@+id/imgTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/stellarfy" />




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvFirstNameSignUpContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/first_name"
        android:layout_marginTop="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"

        app:endIconMode="clear_text"

        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusBottomEnd="30dp"

        android:layout_below="@+id/imgTitle"
        app:startIconDrawable="@drawable/ic_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvFirstNameSignUp"
            android:inputType="text"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvLastNameSignUpContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/tvFirstNameSignUpContainer"
        android:hint="@string/last_name"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"

        app:endIconMode="clear_text"


        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusBottomEnd="30dp"

        app:startIconDrawable="@drawable/ic_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvLastNameSignUp"
            android:inputType="text"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvUsernameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/username"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"

        app:endIconMode="clear_text"

        android:layout_below="@id/tvLastNameSignUpContainer"

        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusBottomEnd="30dp"

        app:startIconDrawable="@drawable/ic_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvUsername"
            android:inputType="textEmailAddress"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvPasswordSignUpContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"


        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:startIconDrawable="@drawable/ic_shieldlock"

        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_below="@id/tvUsernameContainer"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvPasswordSignUp"

            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvConfirmPasswordSignUpContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/confirm_password"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"


        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:startIconDrawable="@drawable/ic_shieldlock"

        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_below="@id/tvPasswordSignUpContainer"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvConfirmPasswordSignUp"

            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:layout_below="@id/tvConfirmPasswordSignUpContainer"
        android:layout_marginStart="50dp"

        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/sign_up"
        app:cornerRadius="30dp"/>

</RelativeLayout>